# llm-scratch

./: .gitignore  Cargo.toml  README.md
python/: README.md  main.py  pyproject.toml
python/llm_scratch/: dataset.py  tokenizer.py  utils.py
python/src/: tokenizer.py  utils.py
python/tests/: conftest.py  test_tokenizer.py
src/: lib.rs  main.rs  tokenizer.rs  utils.rs
